--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 REACT_APP_CITY_KEY=pk.b72f636506faa3cf5c9f31dbb231730b
 REACT_APP_SERVER_LINK=http://localhost:3001
+
+WEATHER_API_KEY=7a1aa28053c6452e88e4bfcf5df5d737
+MOVIE_API_KEY=84638946656328d0f1dc618860ae6fb3
